feat : utilisateur creation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,6 @@ NotBlank.profil.prenom=The first name of the trainer is mandatory.
 Size.profil.prenom=The first name must be between {2} and {1} characters
 Email=The email is malformed
 Pattern.profil.email=The email must be in the form : alias@campus-eni.fr
+
+profile.new.title=New Profile
+profile.title=My Profile
