--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -3,3 +3,6 @@ NotBlank.profil.prenom=Le prénom est obligatoire
 Size.profil.prenom=Le prénom doit avoir entre {2} et {1} caractères
 Email=Le champ email est mal formé
 Pattern.profil.email=L''email doit être sous la forme alias@campus-eni.fr
+
+profile.new.title=Nouveau Profil
+profile.title=Mon Profil
