feat : login clean

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,5 +4,19 @@ Size.profil.prenom=The first name must be between {2} and {1} characters
 Email=The email is malformed
 Pattern.profil.email=The email must be in the form : alias@campus-eni.fr
 
-profile.new.title=New Profile
-profile.title=My Profile
+Profil.titreForm.creer=New Account
+Profil.titreForm.modifier=My Account
+Profil.pseudo=Login (*): 
+Profil.nom=Lastname (*): 
+Profil.prenom=Surname (*): 
+Profil.email=Email (*): 
+Profil.telephone=Phone (*): 
+Profil.motDePasse=Password (*): 
+Profil.confirmation=Confirm password (*): 
+Profil.adresse=Address (*):
+Profil.credit=My credit :
+Profil.btn.creer=Save
+Profil.btn.modifier=Save 
+Profil.btn.modifierMotDePasse=Change password 
+Profil.btn.supprimer=Delete my account 
+Profil.btn.annuler=Cancel
