--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -4,5 +4,19 @@ Size.profil.prenom=Le prénom doit avoir entre {2} et {1} caractères
 Email=Le champ email est mal formé
 Pattern.profil.email=L''email doit être sous la forme alias@campus-eni.fr
 
-profile.new.title=Nouveau Profil
-profile.title=Mon Profil
+Profil.titreForm.creer=Nouveau Profil
+Profil.titreForm.modifier=Mon Profil
+Profil.pseudo=Pseudo (*):
+Profil.nom=Nom (*): 
+Profil.prenom=Prénom (*): 
+Profil.email=Email (*): 
+Profil.telephone=Téléphone (*): 
+Profil.motDePasse=Mot de passe (*): 
+Profil.confirmation=Confirmation mot de passe (*): 
+Profil.adresse=Adresse (*):
+Profil.credit=Mon crédit :
+Profil.btn.creer=Créer
+Profil.btn.modifier=Modifier
+Profil.btn.modifierMotDePasse=Modifier mot de passe 
+Profil.btn.supprimer=Supprimer mon compte 
+Profil.btn.annuler=Annuler
