feat : profil page & internationalisation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,14 +6,22 @@ Pattern.profil.email=The email must be in the form : alias@campus-eni.fr
 
 Profil.titreForm.creer=New Account
 Profil.titreForm.modifier=My Account
-Profil.pseudo=Login (*): 
-Profil.nom=Lastname (*): 
-Profil.prenom=Surname (*): 
-Profil.email=Email (*): 
-Profil.telephone=Phone (*): 
-Profil.motDePasse=Password (*): 
-Profil.confirmation=Confirm password (*): 
-Profil.adresse=Address (*):
+Profil.pseudo=Login: 
+Profil.pseudo.req=Login (*): 
+Profil.nom=Lastname: 
+Profil.nom.req=Lastname (*): 
+Profil.prenom=Surname: 
+Profil.prenom.req=Surname (*): 
+Profil.email=Email: 
+Profil.email.req=Email (*): 
+Profil.telephone=Phone: 
+Profil.telephone.req=Phone (*): 
+Profil.motDePasse=Password: 
+Profil.motDePasse.req=Password (*): 
+Profil.confirmation=Confirm password: 
+Profil.confirmation.req=Confirm password (*): 
+Profil.adresse=Address:
+Profil.adresse.req=Address (*):
 Profil.credit=My credit :
 Profil.btn.creer=Save
 Profil.btn.modifier=Save 
