--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,17 +6,31 @@ Pattern.profil.email=L''email doit être sous la forme alias@campus-eni.fr
 
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
-Profil.pseudo=Pseudo (*): 
-Profil.nom=Nom (*): 
-Profil.prenom=Prénom (*): 
-Profil.email=Email (*): 
-Profil.telephone=Téléphone (*): 
-Profil.motDePasse=Mot de passe (*): 
-Profil.confirmation=Confirmation mot de passe (*): 
-Profil.adresse=Adresse (*):
+Profil.pseudo=Pseudo : 
+Profil.pseudo.req=Pseudo (*): 
+Profil.nom=Nom: 
+Profil.nom.req=Nom (*): 
+Profil.prenom=Prénom: 
+Profil.prenom.req=Prénom (*): 
+Profil.email=Email: 
+Profil.email.req=Email (*): 
+Profil.telephone=Téléphone: 
+Profil.telephone.req=Téléphone (*): 
+Profil.motDePasse=Mot de passe: 
+Profil.motDePasse.req=Mot de passe (*): 
+Profil.confirmation=Confirmation mot de passe: 
+Profil.confirmation.req=Confirmation mot de passe (*): 
+Profil.adresse=Adresse:
+Profil.adresse.req=Adresse (*):
 Profil.credit=Mon crédit : 
 Profil.btn.creer=Créer 
 Profil.btn.modifier=Modifier 
 Profil.btn.modifierMotDePasse=Modifier mot de passe 
 Profil.btn.supprimer=Supprimer mon compte 
 Profil.btn.annuler=Annuler
+
+Menu.login=S''inscrire - Se connecter
+Menu.logout=Se déconnecter
+Menu.accueil=Accueil
+Menu.profil=Mon profil
+Menu.vendreArticle=Vendre un article
