fix: ajout des validations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,11 +10,13 @@ profile.title=Mon Profil
 validation.article.null=L'article ne doit pas être null
 validation.article.nom.blank= Le nom doit être renseigné
 validation.article.categorie.null= La catégorie ne doit pas être null
-validation.article.description.blank=Le description doit être renseignée
+validation.article.description.blank=La description doit être renseignée
+validation.article.description.length=La description doit faire moins de 250 caractères
 validation.article.adresse.null=L'adresse doit être renseignée
-validation.article.prix.null=Le prix doit être renseigné
-validation.article.datedebut.min= La date de début ne doit pas être inférieure à à celle d'aujourd'hui
-validation.article.datedebut.max= a
+validation.article.prix.min=Le prix doit être renseigné
+validation.article.datedebut.min= La date de début ne doit pas être inférieure à celle d'aujourd'hui
+validation.article.datefin.min=La date de fin ne doit pas être inférieure à celle d'aujourd'hui
+validation.article.dates= La date de fin doit être ultérieure à celle de début
 
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
