refactor : sur controleur utilisateur

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,13 +7,13 @@ Pattern.profil.email=L''email doit Ãªtre sous la forme alias@campus-eni.fr
 profile.new.title=Nouveau Profil
 profile.title=Mon Profil
 
-validation.article.null=L'article ne doit pas être null
-validation.article.nom.blank= Le nom doit être renseigné
-validation.article.categorie.null= La catégorie ne doit pas être null
-validation.article.description.blank=Le description doit être renseignée
-validation.article.adresse.null=L'adresse doit être renseignée
-validation.article.prix.null=Le prix doit être renseigné
-validation.article.datedebut.min= La date de début ne doit pas être inférieure à à celle d'aujourd'hui
+validation.article.null=L'article ne doit pas ï¿½tre null
+validation.article.nom.blank= Le nom doit ï¿½tre renseignï¿½
+validation.article.categorie.null= La catï¿½gorie ne doit pas ï¿½tre null
+validation.article.description.blank=Le description doit ï¿½tre renseignï¿½e
+validation.article.adresse.null=L'adresse doit ï¿½tre renseignï¿½e
+validation.article.prix.null=Le prix doit ï¿½tre renseignï¿½
+validation.article.datedebut.min= La date de dï¿½but ne doit pas ï¿½tre infï¿½rieure ï¿½ ï¿½ celle d'aujourd'hui
 validation.article.datedebut.max= a
 
 Profil.titreForm.creer=Nouveau Profil
@@ -41,7 +41,7 @@ Profil.btn.modifierMotDePasse=Modifier mot de passe
 Profil.btn.supprimer=Supprimer mon compte 
 Profil.btn.annuler=Annuler
 
-Menu.login=S''inscrire - Se connecter
+Menu.login=S'inscrire - Se connecter
 Menu.logout=Se dÃ©connecter
 Menu.accueil=Accueil
 Menu.profil=Mon profil
