--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,3 +28,9 @@ Profil.btn.modifier=Save
 Profil.btn.modifierMotDePasse=Change password 
 Profil.btn.supprimer=Delete my account 
 Profil.btn.annuler=Cancel
+
+Menu.login= New account - Login
+Menu.logout=Logout
+Menu.accueil=Home
+Menu.profil=My account
+Menu.vendreArticle=Sell something
