--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -28,3 +28,9 @@ Profil.btn.modifier=Modifier
 Profil.btn.modifierMotDePasse=Modifier mot de passe 
 Profil.btn.supprimer=Supprimer mon compte 
 Profil.btn.annuler=Annuler
+
+Menu.login=S'inscrire - Se connecter
+Menu.logout=Se déconnecter
+Menu.accueil=Accueil
+Menu.profil=Mon profil
+Menu.vendreArticle=Vendre un article
