feat : profil validation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,7 +24,7 @@ Profil.adresse=Address:
 Profil.adresse.req=Address (*):
 Profil.credit=My credit :
 Profil.btn.creer=Save
-Profil.btn.modifier=Save 
+Profil.btn.modifier=Edit 
 Profil.btn.modifierMotDePasse=Change password 
 Profil.btn.supprimer=Delete my account 
 Profil.btn.annuler=Cancel
