feat : validation profile utilisateurs

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -4,6 +4,21 @@ Size.profil.prenom=Le prénom doit avoir entre {2} et {1} caractères
 Email=Le champ email est mal formé
 Pattern.profil.email=L''email doit être sous la forme alias@campus-eni.fr
 
+validation.utilisateur.null=L'utilisateur ne doit pas être null
+validation.utilisateur.pseudo.blank=Le pseudo est obligatoire et ne peut pas être vide;
+validation.utilisateur.pseudo.size=Le pseudo doit faire 30 caractères au maximum;
+validation.utilisateur.nom.blank=Le nom est obligatoire et ne peut pas être vide;
+validation.utilisateur.nom.size=Le nom doit faire 40 caractères au maximum;
+validation.utilisateur.prenom.blank=Le prénom est obligatoire et ne peut pas être vide;
+validation.utilisateur.prenom.size=Le prénom doit faire 50 caractères au maximum;	
+validation.utilisateur.email.blank=L'email est obligatoire et ne peut pas être vide;
+validation.utilisateur.email.size=L'email doit faire 100 caractères au maximum;
+validation.utilisateur.email.format=L'email doit avoir un format d'email valide (EX:utilisateur@domaine.com);
+validation.utilisateur.phone.size=Le numéro de téléphone doit faire 15 caractères au maximum;
+validation.utilisateur.mdp.blank=Le mot de passe est obligatoire et ne peut pas être vide;
+validation.utilisateur.mdp.size=Le mot de passe doit faire entre 8 et 20 caractères;
+validation.utilisateur.adresse.blank=L'adresse est obligatoire et doit renseigner la rue, le code postal et la ville;
+
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
 Profil.pseudo=Pseudo : 
