feat : css de la page profil

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,8 @@ Size.profil.prenom=The first name must be between {2} and {1} characters
 Email=The email is malformed
 Pattern.profil.email=The email must be in the form : alias@campus-eni.fr
 
+validation.errors.title=Please verify your fields
+
 validation.utilisateur.null=User cannot be null
 validation.utilisateur.pseudo.blank=Nickname is required and must be filled;
 validation.utilisateur.pseudo.size=Nickname length is 30 characters;
@@ -17,6 +19,8 @@ validation.utilisateur.email.format=Email address must be valid (EX:user@domain.
 validation.utilisateur.phone.size=Phone number can be a maximum of 15 characters;
 validation.utilisateur.mdp.blank=Password is required and must be filled;
 validation.utilisateur.mdp.size=Password must have a minimum of 8 and a maximum of 20 characters;
+validation.utilisateur.mdp.pattern=Password must contain at least a uppercase, a number and a special letter among these  @ # $ % - + _ ! 
+validation.utilisateur.confirmationmdp.different=Confirmation doesn't match password
 validation.utilisateur.adresse.blank=Address is required and must contain street, zip code and town information;
 
 Profil.titreForm.creer=New Account
@@ -37,6 +41,12 @@ Profil.confirmation=Confirm password:
 Profil.confirmation.req=Confirm password (*): 
 Profil.adresse=Address:
 Profil.adresse.req=Address (*):
+Profil.adresse.rue=Street:
+Profil.adresse.rue.req=Street (*):
+Profil.adresse.codepostal.req=Zip code:
+Profil.adresse.codepostal.req=Zip code (*):
+Profil.adresse.ville=Town:
+Profil.adresse.ville.req=Town (*):
 Profil.credit=My credit :
 Profil.btn.creer=Save
 Profil.btn.modifier=Edit 
