--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -4,20 +4,24 @@ Size.profil.prenom=Le prénom doit avoir entre {2} et {1} caractères
 Email=Le champ email est mal formé
 Pattern.profil.email=L''email doit être sous la forme alias@campus-eni.fr
 
+validation.errors.title=Veuillez vérifier vos champs
+
 validation.utilisateur.null=L'utilisateur ne doit pas être null
-validation.utilisateur.pseudo.blank=Le pseudo est obligatoire et ne peut pas être vide;
-validation.utilisateur.pseudo.size=Le pseudo doit faire 30 caractères au maximum;
-validation.utilisateur.nom.blank=Le nom est obligatoire et ne peut pas être vide;
-validation.utilisateur.nom.size=Le nom doit faire 40 caractères au maximum;
-validation.utilisateur.prenom.blank=Le prénom est obligatoire et ne peut pas être vide;
-validation.utilisateur.prenom.size=Le prénom doit faire 50 caractères au maximum;	
-validation.utilisateur.email.blank=L'email est obligatoire et ne peut pas être vide;
-validation.utilisateur.email.size=L'email doit faire 100 caractères au maximum;
-validation.utilisateur.email.format=L'email doit avoir un format d'email valide (EX:utilisateur@domaine.com);
-validation.utilisateur.phone.size=Le numéro de téléphone doit faire 15 caractères au maximum;
-validation.utilisateur.mdp.blank=Le mot de passe est obligatoire et ne peut pas être vide;
-validation.utilisateur.mdp.size=Le mot de passe doit faire entre 8 et 20 caractères;
-validation.utilisateur.adresse.blank=L'adresse est obligatoire et doit renseigner la rue, le code postal et la ville;
+validation.utilisateur.pseudo.blank=Le pseudo est obligatoire et ne peut pas être vide
+validation.utilisateur.pseudo.size=Le pseudo doit faire 30 caractères au maximum
+validation.utilisateur.nom.blank=Le nom est obligatoire et ne peut pas être vide
+validation.utilisateur.nom.size=Le nom doit faire 40 caractères au maximum
+validation.utilisateur.prenom.blank=Le prénom est obligatoire et ne peut pas être vide
+validation.utilisateur.prenom.size=Le prénom doit faire 50 caractères au maximum
+validation.utilisateur.email.blank=L'email est obligatoire et ne peut pas être vide
+validation.utilisateur.email.size=L'email doit faire 100 caractères au maximum
+validation.utilisateur.email.format=L'email doit avoir un format d'email valide (EX:utilisateur@domaine.com)
+validation.utilisateur.phone.size=Le numéro de téléphone doit faire 15 caractères au maximum
+validation.utilisateur.mdp.blank=Le mot de passe est obligatoire et ne peut pas être vide
+validation.utilisateur.mdp.size=Le mot de passe doit faire entre 8 et 20 caractères
+validation.utilisateur.mdp.pattern=Le mot de passe doit contenir au moins une majuscule, un chiffre et un caratère parmi ceci @ # $ % - + _ ! 
+validation.utilisateur.confirmationmdp.different=La confirmation ne correspond pas au mot de passe
+validation.utilisateur.adresse.blank=L'adresse est obligatoire et doit renseigner la rue, le code postal et la ville
 
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
@@ -37,6 +41,12 @@ Profil.confirmation=Confirmation mot de passe:
 Profil.confirmation.req=Confirmation mot de passe (*): 
 Profil.adresse=Adresse:
 Profil.adresse.req=Adresse (*):
+Profil.adresse.rue=Rue:
+Profil.adresse.rue.req=Rue (*):
+Profil.adresse.codepostal.req=Code postal:
+Profil.adresse.codepostal.req=Code postal (*):
+Profil.adresse.ville=Ville:
+Profil.adresse.ville.req=Ville (*):
 Profil.credit=Mon crédit : 
 Profil.btn.creer=Créer 
 Profil.btn.modifier=Modifier 
