fix : bug sur la modification utilisateur

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,6 +46,8 @@ validation.adresse.rue.size=La rue doit faire 100 caractères au maximum
 validation.adresse.codePostal.blank=Le code postal est obligatoire et ne peut pas être vide
 validation.adresse.codePostal.size=Le code postal doit faire 10 caractères au maximum
 
+message.erreur.profil.non.trouve=Une erreur est survenu pendant l'affichage du profil si le problème dure veuillez contacter l'administrateur
+
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
 Profil.pseudo=Pseudo : 
@@ -76,6 +78,7 @@ Profil.btn.modifier=Modifier
 Profil.btn.modifierMotDePasse=Modifier mot de passe 
 Profil.btn.supprimer=Supprimer mon compte 
 Profil.btn.annuler=Annuler
+Profil.btn.retour=Retour
 
 Menu.login=S'inscrire - Se connecter
 Menu.logout=Se déconnecter
