--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -23,6 +23,8 @@ validation.utilisateur.mdp.pattern=Password must contain at least a uppercase, a
 validation.utilisateur.confirmationmdp.different=Confirmation doesn't match password
 validation.utilisateur.adresse.blank=Address is required and must contain street, zip code and town information;
 
+message.erreur.profil.non.trouve=Error occured during profil display. Please contact your administrator if the problem persists
+
 Profil.titreForm.creer=New Account
 Profil.titreForm.modifier=My Account
 Profil.pseudo=Login: 
@@ -53,6 +55,7 @@ Profil.btn.modifier=Edit
 Profil.btn.modifierMotDePasse=Change password 
 Profil.btn.supprimer=Delete my account 
 Profil.btn.annuler=Cancel
+Profil.btn.retour=Back
 
 Menu.login= New account - Login
 Menu.logout=Logout
