--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -23,6 +23,8 @@ validation.utilisateur.mdp.pattern=Le mot de passe doit contenir au moins une ma
 validation.utilisateur.confirmationmdp.different=La confirmation ne correspond pas au mot de passe
 validation.utilisateur.adresse.blank=L'adresse est obligatoire et doit renseigner la rue, le code postal et la ville
 
+message.erreur.profil.non.trouve=Une erreur est survenu pendant l'affichage du profil si le problème dure veuillez contacter l'administrateur
+
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
 Profil.pseudo=Pseudo : 
@@ -53,6 +55,7 @@ Profil.btn.modifier=Modifier
 Profil.btn.modifierMotDePasse=Modifier mot de passe 
 Profil.btn.supprimer=Supprimer mon compte 
 Profil.btn.annuler=Annuler
+Profil.btn.retour=Retour
 
 Menu.login=S'inscrire - Se connecter
 Menu.logout=Se déconnecter
