feat: ajout de l'internationalisation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -62,3 +62,43 @@ Menu.logout=Logout
 Menu.accueil=Home
 Menu.profil=My account
 Menu.vendreArticle=Sell something
+
+form.article.titre=New sale
+form.modifier.article.titre=Edit sale
+form.article.article= Article (*):
+form.article.categorie= Category (*):
+form.article.description= Description (*):
+form.article.retrait= Adress (*):
+form.article.miseAPrix= Price (*):
+form.article.debutDate= Start of the auction (*):
+form.article.finDate=End of the auction (*):
+form.article.suivant=Next
+form.article.annuler=Cancel sale
+form.article.retour=previous
+
+articles.titre=List of auctions
+articles.filtre=Filter
+articles.filtre.input=Item name
+articles.categorie=Category
+articles.achats=Purchases
+articles.achat1=Open auctions
+articles.achat2=Ongoing auctions
+articles.achat3=Won auctions
+articles.ventes=Sales
+articles.vente1=My unsold items
+articles.vente2=My ongoing sales
+articles.vente3=My completed sales
+articles.rechercher= Search
+articles.annuler= Cancel
+articles.image.text=item's picture
+
+validation.article.null=The item must not be null
+validation.article.nom.blank=The name must be provided
+validation.article.categorie.null=The category must not be null
+validation.article.description.blank=The description must be provided
+validation.article.description.length=The description must be less than 250 characters
+validation.article.adresse.null=The address must be provided
+validation.article.prix.null=The price must be provided
+validation.article.datedebut.min=The start date must not be earlier than today
+validation.article.datefin.min=The end date must not be earlier than today
+validation.article.dates=The end date must be later than the start date
