feat : suppression utilisateur

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -56,6 +56,12 @@ Profil.btn.modifierMotDePasse=Change password
 Profil.btn.supprimer=Delete my account 
 Profil.btn.annuler=Cancel
 Profil.btn.retour=Back
+Profil.supprimer.monCompte=Are you sure to delete your account ? this operation can't be undone
+Profil.supprimer.utilisateur=Are you sure you want to delete the user : {1} ? this operation can't be undone
+
+Password.titreForm.modifier=Modify password
+Password.oldMdp.req=Actual password (*):
+Password.newMdp.req=New password (*):
 
 Menu.login= New account - Login
 Menu.logout=Logout
