--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -56,6 +56,12 @@ Profil.btn.modifierMotDePasse=Modifier mot de passe
 Profil.btn.supprimer=Supprimer mon compte 
 Profil.btn.annuler=Annuler
 Profil.btn.retour=Retour
+Profil.supprimer.monCompte=Êtes-vous sure de vouloir supprimer votre compte ? cette opération ne peut pas être annulée
+Profil.supprimer.utilisateur=Êtes-vous sure de vouloir supprimer l'utilisateur : {1} ? cette opération ne peut pas être annulée
+
+Password.titreForm.modifier=Modifier mon mot de passe
+Password.oldMdp.req=Mot de passe actuel (*):
+Password.newMdp.req=Nouveau mot de passe (*):
 
 Menu.login=S'inscrire - Se connecter
 Menu.logout=Se déconnecter
