--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,6 +97,9 @@ articles.vente3=My completed sales
 articles.rechercher= Search
 articles.annuler= Cancel
 articles.image.text=item's picture
+articles.prix=Price:
+articles.dateFin=End of the auction:
+articles.vendeur=Seller:
 
 validation.article.null=The item must not be null
 validation.article.nom.blank=The name must be provided
