--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -71,7 +71,7 @@ Menu.vendreArticle=Vendre un article
 
 form.article.titre=Nouvelle vente
 form.modifier.article.titre=Modifier vente
-form.article.article= Item name (*):
+form.article.article= Article (*):
 form.article.categorie= Catégorie (*):
 form.article.description= Description (*):
 form.article.retrait= Retrait (*):
@@ -97,6 +97,9 @@ articles.vente3=Mes ventes terminees
 articles.rechercher= Rechercher
 articles.annuler= Annuler
 articles.image.text=Image de l'article
+articles.prix=Prix:
+articles.dateFin=Fin de l'enchere:
+articles.vendeur=Vendeur:
 
 validation.article.null=L'article ne doit pas etre null
 validation.article.nom.blank= Le nom doit etre renseigne
