feat : mise en page login

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -68,3 +68,11 @@ Menu.logout=Logout
 Menu.accueil=Home
 Menu.profil=My account
 Menu.vendreArticle=Sell something
+Menu.badge.date=Date of the day :
+Menu.badge.utilisateur=Participant :
+
+Login.identifiant=Login :
+Login.motDePasse=Password :
+Login.btn.connexion=Connection
+Login.btn.mdpOublie=Forgotten password
+Login.btn.connexion=Sign in
