--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -68,3 +68,11 @@ Menu.logout=Se déconnecter
 Menu.accueil=Accueil
 Menu.profil=Mon profil
 Menu.vendreArticle=Vendre un article
+Menu.badge.date=Date du jour :
+Menu.badge.utilisateur=Participant :
+
+Login.identifiant=Identifiant :
+Login.motDePasse=Mot de passe :
+Login.btn.connexion=Connexion
+Login.btn.mdpOublie=Mot de passe oublié
+Login.btn.connexion=Créer un compte
