fix : changer le login pour utiliser le pseudo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,7 +41,6 @@ Profil.btn.retour=Retour
 Profil.supprimer.monCompte=Êtes-vous sure de vouloir supprimer votre compte ? cette opération ne peut pas être annulée
 Profil.supprimer.utilisateur=Êtes-vous sure de vouloir supprimer l'utilisateur : {1} ? cette opération ne peut pas être annulée
 
-
 Password.titreForm.modifier=Modifier mon mot de passe
 Password.oldMdp.req=Mot de passe actuel (*):
 Password.newMdp.req=Nouveau mot de passe (*):
@@ -54,11 +53,12 @@ Menu.vendreArticle=Vendre un article
 Menu.badge.date=Date du jour :
 Menu.badge.utilisateur=Participant :
 
+Login.title=inscription
 Login.identifiant=Identifiant :
 Login.motDePasse=Mot de passe :
 Login.btn.connexion=Connexion
 Login.btn.mdpOublie=Mot de passe oublié
-Login.btn.connexion=Créer un compte
+Login.btn.creerCompte=Créer un compte
 
 form.article.titre=Nouvelle vente
 form.modifier.article.titre=Modifier vente
