--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -71,11 +71,12 @@ Menu.vendreArticle=Sell something
 Menu.badge.date=Date of the day :
 Menu.badge.utilisateur=Participant :
 
+Login.title=LogIn/signIn
 Login.identifiant=Login :
 Login.motDePasse=Password :
 Login.btn.connexion=Connection
 Login.btn.mdpOublie=Forgotten password
-Login.btn.connexion=Sign in
+Login.btn.creerCompte=Sign in
 
 form.article.titre=New sale
 form.modifier.article.titre=Edit sale
