feat: écran admin

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -49,6 +49,7 @@ Profil.adresse.codepostal.req=Zip code:
 Profil.adresse.codepostal.req=Zip code (*):
 Profil.adresse.ville=Town:
 Profil.adresse.ville.req=Town (*):
+Profil.administrateur=Is admin
 Profil.credit=My credit :
 Profil.btn.creer=Save
 Profil.btn.modifier=Edit 
@@ -57,7 +58,12 @@ Profil.btn.supprimer=Delete my account
 Profil.btn.annuler=Cancel
 Profil.btn.retour=Back
 Profil.supprimer.monCompte=Are you sure to delete your account ? this operation can't be undone
-Profil.supprimer.utilisateur=Are you sure you want to delete the user : {1} ? this operation can't be undone
+Profil.supprimer.utilisateur=Are you sure you want to delete the user : {0} ? this operation can't be undone
+
+Admin.btn.desactiver=Disabled
+Admin.btn.supprimer=Delete
+Admin.action=Action
+Admin.utilisateurs.title=Users List
 
 Password.titreForm.modifier=Modify password
 Password.oldMdp.req=Actual password (*):
@@ -70,6 +76,7 @@ Menu.profil=My account
 Menu.vendreArticle=Sell something
 Menu.badge.date=Date of the day :
 Menu.badge.utilisateur=Participant :
+Menu.listeUtilisateurs=Users List
 
 Login.title=LogIn/signIn
 Login.identifiant=Login :
