--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -49,6 +49,7 @@ Profil.adresse.codepostal.req=Code postal:
 Profil.adresse.codepostal.req=Code postal (*):
 Profil.adresse.ville=Ville:
 Profil.adresse.ville.req=Ville (*):
+Profil.administrateur=Est admin
 Profil.credit=Mon crédit : 
 Profil.btn.creer=Créer 
 Profil.btn.modifier=Modifier 
@@ -57,7 +58,12 @@ Profil.btn.supprimer=Supprimer mon compte
 Profil.btn.annuler=Annuler
 Profil.btn.retour=Retour
 Profil.supprimer.monCompte=Êtes-vous sure de vouloir supprimer votre compte ? cette opération ne peut pas être annulée
-Profil.supprimer.utilisateur=Êtes-vous sure de vouloir supprimer l'utilisateur : {1} ? cette opération ne peut pas être annulée
+Profil.supprimer.utilisateur=Êtes-vous sure de vouloir supprimer l''utilisateur : {0} ? cette opération ne peut pas être annulée
+
+Admin.btn.desactiver=Désactiver
+Admin.btn.supprimer=Supprimer
+Admin.action=Action
+Admin.utilisateurs.title=Liste utilisateurs
 
 Password.titreForm.modifier=Modifier mon mot de passe
 Password.oldMdp.req=Mot de passe actuel (*):
@@ -70,6 +76,7 @@ Menu.profil=Mon profil
 Menu.vendreArticle=Vendre un article
 Menu.badge.date=Date du jour :
 Menu.badge.utilisateur=Participant :
+Menu.listeUtilisateurs=Liste utilisateurs
 
 Login.title=inscription
 Login.identifiant=Identifiant :
@@ -110,13 +117,13 @@ articles.prix=Prix:
 articles.dateFin=Fin de l'enchere:
 articles.vendeur=Vendeur:
 
-validation.article.null=L'article ne doit pas etre null
-validation.article.nom.blank= Le nom doit etre renseigne
-validation.article.categorie.null= La categorie ne doit pas etre null
-validation.article.description.blank=La description doit etre renseignee
-validation.article.description.length=La description doit faire moins de 250 caracteres
-validation.article.adresse.null=L'adresse doit etre renseignee
-validation.article.prix.null=Le prix doit etre renseigne
-validation.article.datedebut.min= La date de debut ne doit pas etre inferieure a celle d'aujourd'hui
-validation.article.datefin.min=La date de fin ne doit pas etre inferieure a celle d'aujourd'hui
-validation.article.dates= La date de fin doit etre ulterieure a celle de debut
+validation.article.null=L'article ne doit pas être null
+validation.article.nom.blank= Le nom doit être renseigné
+validation.article.categorie.null= La catégorie ne doit pas être null
+validation.article.description.blank=La description doit être renseignée
+validation.article.description.length=La description doit faire moins de 250 caractères
+validation.article.adresse.null=L'adresse doit être renseignée
+validation.article.prix.null=Le prix doit être renseigné
+validation.article.datedebut.min= La date de début ne doit pas être inférieure à celle d'aujourd'hui
+validation.article.datefin.min=La date de fin ne doit pas être inférieure à celle d'aujourd'hui
+validation.article.dates= La date de fin doit être ultérieure à celle de début
