feat : error page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -139,5 +139,13 @@ validation.adresse.codePostal.size=Le code postal doit faire 10 caractères au m
 
 message.erreur.profil.non.trouve=Une erreur est survenu pendant l'affichage du profil si le problème dure veuillez contacter l'administrateur
 
+error.http.title=Erreur
+error.http.h1=Erreur 
+error.http.label.403=Vous n'êtes pas autorisé
+error.http.label.404=Cette ressource n'existe pas
+error.http.label.500=Impossible d'interagir avec le Serveur
+error.http.label.other=Veuillez nous excuser pour ce problème
+error.http.button=Retour à l'accueil
+
 Index.title=Encheres
 Index.h1=Eni-Encheres
