--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,6 +25,14 @@ validation.utilisateur.adresse.blank=Address is required and must contain street
 
 message.erreur.profil.non.trouve=Error occured during profil display. Please contact your administrator if the problem persists
 
+error.http.title=Error
+error.http.h1=Error
+error.http.label.403=Not authorized
+error.http.label.404=Doesn't exists
+error.http.label.500=Server error. Please contact us.
+error.http.label.other=Sorry for this issue
+error.http.button=Back home
+
 Profil.titreForm.creer=New Account
 Profil.titreForm.modifier=My Account
 Profil.pseudo=Login: 
