--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -25,6 +25,14 @@ validation.utilisateur.adresse.blank=L'adresse est obligatoire et doit renseigne
 
 message.erreur.profil.non.trouve=Une erreur est survenu pendant l'affichage du profil si le problème dure veuillez contacter l'administrateur
 
+error.http.title=Erreur
+error.http.h1=Erreur 
+error.http.label.403=Vous n'êtes pas autorisé
+error.http.label.404=Cette ressource n'existe pas
+error.http.label.500=Impossible d'interagir avec le Serveur
+error.http.label.other=Veuillez nous excuser pour ce problème
+error.http.button=Retour à l'accueil
+
 Profil.titreForm.creer=Nouveau Profil
 Profil.titreForm.modifier=Mon Profil
 Profil.pseudo=Pseudo : 
