feat : error page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -66,6 +66,8 @@ Profil.btn.supprimer=Delete my account
 Profil.btn.annuler=Cancel
 Profil.btn.retour=Back
 Profil.supprimer.monCompte=Are you sure to delete your account ? this operation can't be undone
+Profil.anonymiser.utilisateur=Are you sure you want to anonymize the user : {0} ? this operation can't be undone
+Profil.desactiver.utilisateur=Are you sure you want to desactivate the user : {0} ?
 Profil.supprimer.utilisateur=Are you sure you want to delete the user : {0} ? this operation can't be undone
 
 Admin.btn.desactiver=Disabled
