--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -66,6 +66,8 @@ Profil.btn.supprimer=Supprimer mon compte
 Profil.btn.annuler=Annuler
 Profil.btn.retour=Retour
 Profil.supprimer.monCompte=Êtes-vous sure de vouloir supprimer votre compte ? cette opération ne peut pas être annulée
+Profil.anonymiser.utilisateur=Êtes-vous sure de vouloir anonymiser l''utilisateur : {0} ? cette opération ne peut pas être annulée
+Profil.desactiver.utilisateur=Êtes-vous sure de vouloir désactiver l''utilisateur : {0} ?
 Profil.supprimer.utilisateur=Êtes-vous sure de vouloir supprimer l''utilisateur : {0} ? cette opération ne peut pas être annulée
 
 Admin.btn.desactiver=Désactiver
