feat : error page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -70,6 +70,7 @@ Profil.anonymiser.utilisateur=Are you sure you want to anonymize the user : {0} 
 Profil.desactiver.utilisateur=Are you sure you want to desactivate the user : {0} ?
 Profil.supprimer.utilisateur=Are you sure you want to delete the user : {0} ? this operation can't be undone
 
+Admin.btn.anonymiser=RGPD
 Admin.btn.desactiver=Disabled
 Admin.btn.supprimer=Delete
 Admin.action=Action
