--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -70,6 +70,7 @@ Profil.anonymiser.utilisateur=Êtes-vous sure de vouloir anonymiser l''utilisate
 Profil.desactiver.utilisateur=Êtes-vous sure de vouloir désactiver l''utilisateur : {0} ?
 Profil.supprimer.utilisateur=Êtes-vous sure de vouloir supprimer l''utilisateur : {0} ? cette opération ne peut pas être annulée
 
+Admin.btn.anonymiser=RGPD
 Admin.btn.desactiver=Désactiver
 Admin.btn.supprimer=Supprimer
 Admin.action=Action
